--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-htmlmin": "^5.0.1",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.2",
+    "jquery.nicescroll": "^3.7.6",
     "slick-carousel": "^1.8.1",
     "vanilla-text-mask": "^5.1.1",
     "vex-js": "^4.1.0"
