--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.2",
     "jquery.nicescroll": "^3.7.6",
