--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.2",
     "jquery.nicescroll": "^3.7.6",
+    "rangeslider-js": "^3.2.5",
     "slick-carousel": "^1.8.1",
     "vanilla-text-mask": "^5.1.1",
     "vex-js": "^4.1.0"
