--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-htmlmin": "^5.0.1",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.3.1",
+    "jquery-form-styler": "^2.0.2",
     "jquery-validation": "^1.19.2",
     "jquery.nicescroll": "^3.7.6",
     "rangeslider-js": "^3.2.5",
